# MistralCLI

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  main.rs  types.rs  utils.rs
